@@ -5,3 +5,8 @@ Thành viên:
 
 ## Building:
 Intelij: Mở tab Maven -> oop_btl -> Plugins -> javafx -> javafx:run.
+### Build bằng Intelij (để debug,...):
+Thêm dòng sau vào VM option của Intelij:
+```
+--module-path $Classpath$ --add-modules javafx.controls
+```
